Fix Android 750k qualification for Java 8 source level